--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Released   : 20131220
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<title>PODW </title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
@@ -27,7 +27,7 @@ Released   : 20131220
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><span class="fa fa-bug"></span><a href="#">Untamed</a></h1>
+			<h1><span class="fa fa-bug"></span><a href="#">PODW</a></h1>
 		</div>
 		<div id="menu">
 			<ul>
@@ -43,7 +43,7 @@ Released   : 20131220
 <div id="header-featured">
 	<div id="banner-wrapper">
 		<div id="banner" class="container">
-			<h2>Maecenas luctus lectus</h2>
+			<h2>歡迎來到網路上的一個小角落</h2>
 			<p>This is <strong>Untamed</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 			<a href="#" class="button">Etiam posuere</a>
 		</div>
